force-app/main/default/objects/Partida_Remision__c/Partida_Remision__c.object-meta.xml
<CustomObject>
    <label>Partida de Remision</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Numero de Partida Remision</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partidas de Remision</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>