force-app/main/default/objects/Partida_Remision__c/fields/Partida_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Partida_Cotizacion__c</fullName>
    <label>Partida de Cotizacion</label>
    <type>Lookup</type>
    <referenceTo>Partida_Cotizacion__c</referenceTo>
    <relationshipLabel>Partidas de Remision</relationshipLabel>
    <relationshipName>Partidas_Remision</relationshipName>
</CustomField>