force-app/main/default/objects/Partida_Remision__c/fields/Remision__c.field-meta.xml
<CustomField>
    <fullName>Remision__c</fullName>
    <label>Remision</label>
    <type>MasterDetail</type>
    <referenceTo>Remision__c</referenceTo>
    <relationshipLabel>Partidas de Remision</relationshipLabel>
    <relationshipName>Partidas_Remision</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>